# flake-auto-follows

./: Cargo.toml
src/: cli.rs  commands.rs  config.rs  main.rs  metadata.rs  nix.rs  tracing.rs
test_data/: faf.toml  flake.nix  metadata.json
